# locness-datamanager

./: .gitignore  README.md  TESTING.md  config.toml  main.py  pyproject.toml  shore-sync-api.py  shore-sync.py  test_data_integrity.py  test_database_validation.py  test_dynamodb.py  test_parquet_integrity.py  test_resampler.py
locness_datamanager/: backup_db.py  config.py  config.toml  file_writers.py  main.py  resample.py  resample_summary.py  resampler.py  setup_db.py  setup_dynamodb.py  shore-sync-api.py  sqlite_resample.py  synthetic_data.py
tests/: __init__.py  conftest.py  test_basic.py  test_config.py  test_dynamodb.py  test_dynamodb_simple.py  test_main.py  test_missing_data_handling.py  test_resample.py  test_resample_incremental.py  test_resample_mean_aggregation.py  test_setup_db.py  test_synthetic_data.py
