[project]
name = "locness-datamanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.1",
    "google-api-python-client>=2.175.0",
    "google-auth-oauthlib>=1.2.2",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
]

[project.scripts]
generate = "locness_datamanager.synthetic_data:main"
setup-sqlite-db = "locness_datamanager.setup_db:setup_sqlite_db"
backup-db = "locness_datamanager.backup_db:main"
